# WLM-Agent-Behavior

./: README.md  pyproject.toml
docs/: api.md  behavior-rules.md  overview.md  roadmap.md
examples/: closure_planning.md  tension_resolution.md  wlmgraph_to_behavior.md
src/wlm_agent_behavior/: __init__.py  api.py  behavior_emitter.py  cli.py  closure_planner.py  dimension_evaluator.py  policy_engine.py  tension_resolver.py
tests/: test_behavior_emitter.py  test_closure_planner.py  test_end_to_end.py  test_policy_engine.py  test_tension_resolver.py
